--- a/views/index.html
+++ b/views/index.html
@@ -4,6 +4,15 @@
   <h3>Pages</h3>
   <hr>
   <ul class="list-unstyled">
-    <!-- PLACEHOLDER LIST OF PAGES -->
+	{% if pageArray.length > 0 %}
+	  <ul>
+	    {% for page in pageArray %}
+	      <li>{{ page | pageLink }}</li>
+	    {% endfor %}
+	  </ul>
+	{% else %}
+	  There are no pages. Why don't you <a href='/wiki/add'>add one</a>?
+	{% endif %}
   </ul>
+ 
 {% endblock %}
